--- a/css/interactive.css
+++ b/css/interactive.css
@@ -1,3 +1,18 @@
+@font-face {
+  font-family: graphik;
+  src: url('../fonts/GraphikRegular.otf');
+}
+@font-face {
+  font-family: graphik;
+  src: url('../fonts/GraphikBold.otf');
+  font-weight: bold;
+}
+@font-face {
+  font-family: graphik;
+  src: url('../fonts/GraphikRegularItalic.otf');
+  font-style: italic;
+}
+
 html, body {
   height: 100%;
 }
@@ -13,4 +28,9 @@ body {
   align-items: center;
 
   text-align: center;
+}
+
+h1 {
+  font-family: graphik, sans-serif;
+  font-weight: bold;
 }
